--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "version": 2,
   "functions": {
     "api/chat.ts": {
-      "runtime": "edge"
+      "runtime": "edge",
+      "memory": 1024,
+      "maxDuration": 30
     }
-  }
+  },
+  "regions": ["iad1"]  // Optional: specify preferred region
 }
